--- a/MovieProject/Web.config
+++ b/MovieProject/Web.config
@@ -12,6 +12,10 @@
       providerName="System.Data.SqlClient" />
     <add name="MovieDBConnectionStringNoDuplicate" connectionString="Data Source=LAPTOP-9C071575;Initial Catalog=MovieDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=DESKTOP-F8MV33J\SQLEXPRESS;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="MovieDBConnectionString" connectionString="Data Source=DESKTOP-F8MV33J\SQLEXPRESS;Initial Catalog=MovieDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
